# Translit

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: auto_release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/ydapi/: Cargo.toml
src-tauri/ydapi/src/: lib.rs
src/components/ui/textarea/: Textarea.vue
src/pages/: AboutView.vue  IndexView.vue  SettingView.vue
src/stores/: settings.ts
