[package]
name = "ydapi"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
md5 = "0.7.0"
openssl = { version = "0.10.73", features = ["vendored"] }
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["cookies", "json"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros"] }
